tests/compile_fail/derive_kargs_non_string.rs
#[derive(ktstr::Scheduler)]
#[scheduler(name = "bad", kargs = [42])]
#[allow(dead_code)]
enum KargsNonStringFlag {}

fn main() {}
